changed content and styled elements

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Your Title Here.</title>
+  <title>Sami Bee</title>
   <link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="images/favicons/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="images/favicons/apple-icon-72x72.png">
@@ -104,14 +104,18 @@
 
     <div class="right">
       <div class="details">
-        <h1>First Last</h1>
-        <p>Coding for a better Earth</p>
+        <h1><em>Sami Bachir</em></h1>
+        <p>Coding for a better Earth.<br>
+          For a better Mars,<br>
+          A better Jupiter,<br>
+          And, lest we forget, a better Pluto.
+        </p>
 
         <p>
           <span class="link-heading">Contact:</span>
-          <a class="profile-link" href="">Facebook</a>
-          <a class="profile-link" href="">Twitter</a>
-          <a class="profile-link" href="">Github</a>
+          <a class="profile-link" href="https://www.facebook.com/sami.bachir.585">Facebook</a>
+          <a class="profile-link" href="https://twitter.com/BachirSami?lang=en">Twitter</a>
+          <a class="profile-link" href="https://github.com/samibash">Github</a>
           <a class="profile-link" href="mailto:cool@cool.com">contact@gmail.com</a>
         </p>
       </div>
